@@ -7,6 +7,7 @@
      <service class="org.eclipse.scout.rt.server.services.common.file.RemoteFileService"/>
      <service class="org.eclipse.scout.rt.server.services.common.ping.PingService"/>
      <service class="org.eclipse.scout.rt.server.services.common.security.PermissionService"/>
+     <service class="org.eclipse.scout.rt.server.services.common.security.LogoutService"/>
      <service class="org.eclipse.scout.rt.server.services.common.session.ServerSessionRegistryService"/>
      <service class="org.eclipse.scout.rt.server.services.lookup.BatchLookupService" factory="org.eclipse.scout.rt.server.services.ServerServiceFactory" session="org.eclipse.scout.rt.server.IServerSession"/>
      <service class="org.eclipse.scout.rt.shared.services.common.exceptionhandler.LogExceptionHandlerService"/>
